# ByroRedux

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  HISTORY.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  dim_13.md  dim_17.md
byroredux/: Cargo.toml
byroredux/examples/: dump_nif.rs  r5_check_bgsm.rs
byroredux/src/: anim_convert.rs  app_step.rs  asset_provider.rs  boot.rs  cell_loader.rs  cell_loader_euler_zup_to_quat_yup_tests.rs  cell_loader_finish_partial_tests.rs  cell_loader_lgtm_fallback_tests.rs  cell_loader_load_order.rs  cell_loader_nif_import_registry.rs  cell_loader_nif_import_registry_tests.rs  cell_loader_nif_light_spawn_gate_tests.rs  cell_loader_pkin_expansion_tests.rs  cell_loader_placement_root_subtree_tests.rs  cell_loader_refr.rs  cell_loader_refr_texture_overlay_tests.rs  cell_loader_root_index_tests.rs  cell_loader_scol_expansion_tests.rs  cell_loader_sky_params_cleanup_tests.rs  cell_loader_terrain.rs  cell_loader_terrain_splat_tests.rs  cli_args.rs  commands.rs  commands_tests.rs  components.rs  cornell.rs  debug_load.rs  env_translate.rs  game_profiles.rs  helpers.rs  main.rs  material_translate.rs  npc_spawn.rs  parsed_nif_cache.rs  ragdoll.rs  render.rs  save_io.rs  scene.rs  scene_import_cache.rs  scheduler_access_tests.rs  (+5 more)
byroredux/src/asset_provider/: archive.rs  material.rs  mod.rs  script.rs  tests.rs  texture.rs
byroredux/src/cell_loader/: attach_points_spawn_tests.rs  euler.rs  exterior.rs  finish_partial_tests.rs  index.rs  inventory_release_tests.rs  lgtm_fallback_tests.rs  load.rs  load_order.rs  nif_import_registry.rs  nif_import_registry_tests.rs  nif_light_spawn_gate_tests.rs  object_lod.rs  partial.rs  pkin_expansion_tests.rs  placement_lod.rs  placement_root_subtree_tests.rs  precombined.rs  rapier_release_tests.rs  references.rs  refr.rs  refr_texture_overlay_tests.rs  scol_expansion_tests.rs  sky_params_cleanup_tests.rs  spawn.rs  terrain.rs  terrain_lod.rs  terrain_lod_btr.rs  terrain_splat_tests.rs  transition.rs  unload.rs  unload_greyscale_lut_tests.rs  unload_skin_cleanup_tests.rs  water.rs
byroredux/src/commands/: actor_value.rs  assets.rs  condition.rs  mod.rs  scene.rs  shared.rs  view.rs  world_info.rs
byroredux/src/render/: bone_palette_overflow_tests.rs  camera.rs  directional_upload_tests.rs  draw_sort_key_tests.rs  env_var_cache_tests.rs  fog_curve_propagation_tests.rs  frustum_tests.rs  lights.rs  mod.rs  particles.rs  render_origin_shared_tests.rs  skinned.rs  sky.rs  sort_key_tests.rs  static_mesh_fx_skip_tests.rs  static_meshes.rs  variant_pack_gating_tests.rs  water.rs
byroredux/src/scene/: climate_tod_hours_tests.rs  cloud_tile_scale_tests.rs  nif_loader.rs  procedural_fallback_tests.rs  radius_parse_tests.rs  world_setup.rs
byroredux/src/systems/: animation.rs  audio.rs  billboard.rs  bounds.rs  camera.rs  character.rs  debug.rs  escort.rs  follow.rs  guard.rs  light_anim.rs  locomotion.rs  metrics.rs  particle.rs  patrol.rs  sandbox.rs  travel.rs  wander.rs  water.rs  weather.rs
byroredux/tests/: golden_frames.rs  m41_phase1bx_skinning.rs  skinning_e2e.rs
byroredux/tests/golden/: README.md
crates/core/: Cargo.toml
crates/core/src/: animation.rs  color.rs  combat.rs  console.rs  ecs.rs  form_id.rs  lib.rs  math.rs  settings.rs  stealth.rs  types.rs
crates/debug-server/: Cargo.toml
crates/debug-server/src/: evaluator.rs  lib.rs  listener.rs  registration.rs  system.rs
crates/debug-ui/: Cargo.toml
crates/debug-ui/src/: lib.rs  panels.rs
crates/nif/: Cargo.toml
crates/nif/examples/: d5_ba2_extract_check.rs  d5_coverage.rs  d5_listba2.rs  d5_starfield_import.rs  d5_unk_ba2.rs  dump_alpha.rs  dump_nolighting.rs  dump_transforms.rs  emitter_dump.rs  extract_nif.rs  full_histogram.rs  import_probe.rs  imptest.rs  kf_channel_dump.rs  listbsa.rs  locate_unknowns.rs  lod_probe.rs  material_dump.rs  nif_stats.rs  r6_bone_count_survey.rs  recovery_trace.rs  sf_root_material_sample.rs  trace_block.rs  unknown_types.rs
crates/nif/src/: anim.rs  anim_tests.rs  header.rs  import.rs  kfm.rs  lib.rs  rotation.rs  scene.rs  shader_flags.rs  stream.rs  tests.rs  types.rs  version.rs
crates/nif/tests/: block_coverage_baselines.rs  heap_allocation_bounds.rs  heap_allocation_bounds_geometry.rs  mtidle_motion_diagnostic.rs  parse_real_nifs.rs  per_block_baselines.rs  ragdoll_import.rs  synthetic_fixtures.rs  translation_completeness.rs
crates/pex/: Cargo.toml
crates/pex/examples/: pex_corpus_shapes.rs  pex_corpus_smoke.rs
crates/pex/src/: lib.rs  model.rs  opcode.rs  reader.rs
crates/pex/tests/: r5_fidelity.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/shaders/: bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv  caustic_splat.comp  caustic_splat.comp.spv  cluster_cull.comp  cluster_cull.comp.spv  composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  depth_prepass.frag  depth_prepass.frag.spv  depth_prepass.vert  depth_prepass.vert.spv  presentation.frag  presentation.frag.spv  skin_palette.comp  skin_palette.comp.spv  skin_vertices.comp  skin_vertices.comp.spv  ssao.comp  ssao.comp.spv  svgf_atrous.comp  svgf_atrous.comp.spv  svgf_temporal.comp  svgf_temporal.comp.spv  taa.comp  taa.comp.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  volumetrics_inject.comp  volumetrics_inject.comp.spv  (+6 more)
crates/renderer/src/: deferred_destroy.rs  lib.rs  mesh.rs  shader_constants.rs  shader_constants_data.rs  texture_registry.rs  texture_registry_bindless_tests.rs  texture_registry_tests.rs  vertex.rs
crates/save/: Cargo.toml
crates/save/src/: disk.rs  driver.rs  lib.rs  registry.rs  snapshot.rs  validate.rs
crates/save/tests/: round_trip.rs
crates/scripting/: Cargo.toml
crates/scripting/examples/: fragment_coverage.rs  quest_fragment_populate.rs
crates/scripting/src/: cleanup.rs  condition.rs  events.rs  fragment.rs  globals.rs  lib.rs  (+5 more)
crates/spt/: Cargo.toml
crates/ui/: Cargo.toml
gamebyro-redux/: Cargo.toml
gamebyro-redux/src/: main.rs
(+3368 files in other folders)
