[workspace]
members = [
    "crates/core",
    "crates/nif",
    "crates/plugin",
    "crates/renderer",
    "crates/platform",
    "crates/scripting",
    "crates/cxx-bridge",
    "byroredux",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Engine crates
byroredux-core = { path = "crates/core" }
byroredux-renderer = { path = "crates/renderer" }
byroredux-platform = { path = "crates/platform" }
byroredux-plugin = { path = "crates/plugin" }
byroredux-scripting = { path = "crates/scripting" }
byroredux-nif = { path = "crates/nif" }
byroredux-cxx-bridge = { path = "crates/cxx-bridge" }

# Vulkan / GPU
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.27", features = ["vulkan"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Math
glam = "0.29"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# String interning
string-interner = "0.17"

# Identity
uuid = { version = "1", features = ["v5", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = { version = "1", features = ["serde"] }

# Image loading
image = "0.24"

# C++ interop
cxx = "1"
cxx-build = "1"
