[workspace]
members = [
    "crates/core",
    "crates/nif",
    "crates/plugin",
    "crates/physics",
    "crates/renderer",
    "crates/platform",
    "crates/scripting",
    "crates/cxx-bridge",
    "crates/bsa",
    "crates/bgsm",
    "crates/ui",
    "crates/papyrus",
    "crates/facegen",
    "crates/debug-protocol",
    "crates/debug-server",
    "tools/byro-dbg",
    "byroredux",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Engine crates
byroredux-core = { path = "crates/core" }
byroredux-renderer = { path = "crates/renderer" }
byroredux-platform = { path = "crates/platform" }
byroredux-plugin = { path = "crates/plugin" }
byroredux-scripting = { path = "crates/scripting" }
byroredux-nif = { path = "crates/nif" }
byroredux-bsa = { path = "crates/bsa" }
byroredux-bgsm = { path = "crates/bgsm" }
byroredux-physics = { path = "crates/physics" }
byroredux-cxx-bridge = { path = "crates/cxx-bridge" }
byroredux-ui = { path = "crates/ui" }
byroredux-papyrus = { path = "crates/papyrus" }
byroredux-facegen = { path = "crates/facegen" }
byroredux-debug-protocol = { path = "crates/debug-protocol" }
byroredux-debug-server = { path = "crates/debug-server" }

# Vulkan / GPU
ash = "0.38"
ash-window = "0.13"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
rspirv = "0.12"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Math
glam = "0.29"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# String interning
string-interner = "0.17"

# Identity
uuid = { version = "1", features = ["v5", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }

# Parallelism
rayon = "1"

# Compression
flate2 = "1"
lz4_flex = "0.11"

# Linear algebra (robust SVD for degenerate NIF matrices)
nalgebra = "0.33"

# Physics (nalgebra 0.33 ABI matches the workspace pin above)
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Image loading
image = "0.24"

# C++ interop
cxx = "1"
cxx-build = "1"
