[workspace]
members = [
    "crates/core",
    "crates/nif",
    "crates/spt",
    "crates/plugin",
    "crates/physics",
    "crates/renderer",
    "crates/platform",
    "crates/scripting",
    "crates/cxx-bridge",
    "crates/bsa",
    "crates/bgsm",
    "crates/sfmaterial",
    "crates/ui",
    "crates/papyrus",
    "crates/facegen",
    "crates/audio",
    "crates/debug-protocol",
    "crates/debug-server",
    "crates/debug-ui",
    "tools/byro-dbg",
    "byroredux",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Engine crates
byroredux-core = { path = "crates/core" }
byroredux-renderer = { path = "crates/renderer" }
byroredux-platform = { path = "crates/platform" }
byroredux-plugin = { path = "crates/plugin" }
byroredux-scripting = { path = "crates/scripting" }
byroredux-nif = { path = "crates/nif" }
byroredux-spt = { path = "crates/spt" }
byroredux-bsa = { path = "crates/bsa" }
byroredux-bgsm = { path = "crates/bgsm" }
byroredux-sfmaterial = { path = "crates/sfmaterial" }
byroredux-physics = { path = "crates/physics" }
byroredux-cxx-bridge = { path = "crates/cxx-bridge" }
byroredux-ui = { path = "crates/ui" }
byroredux-papyrus = { path = "crates/papyrus" }
byroredux-facegen = { path = "crates/facegen" }
byroredux-audio = { path = "crates/audio" }
byroredux-debug-protocol = { path = "crates/debug-protocol" }
byroredux-debug-server = { path = "crates/debug-server" }
byroredux-debug-ui = { path = "crates/debug-ui" }

# Vulkan / GPU
ash = "0.38"
ash-window = "0.13"
# Bumped 0.27 → 0.28 to align with egui-ash-renderer 0.11.0's
# transitive pin (one allocator copy in the dep graph, not two).
# 0.27 → 0.28 is a minor API bump — `Allocation::is_null` removed,
# `Allocator::report` renamed to `generate_report`. The renderer
# already uses `generate_report` (see allocator.rs), so the bump
# is source-compatible.
gpu-allocator = { version = "0.28", features = ["vulkan"] }
rspirv = "0.12"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Math — `mint` feature exposes `Into<mint::Vector3<f32>>` etc. for
# kira's spatial API (`add_listener`, `add_spatial_sub_track`). No
# runtime cost when unused; the conversions are zero-overhead casts.
glam = { version = "0.29", features = ["mint"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Profiling / tracing — wall-clock span ladder for the cell-load
# critical path (#886 / INFRA-PERF-01). `tracing` is a zero-cost
# no-op when no subscriber is installed, so the macros impose only a
# function-pointer check on default builds. The Tracy subscriber +
# client are gated behind the binary's `tracing-tracy` feature so
# default builds don't pull them in.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "registry"] }
tracing-tracy = { version = "0.11", default-features = false, features = ["enable", "system-tracing"] }

# Error handling
anyhow = "1"
thiserror = "2"

# String interning
string-interner = "0.17"

# Identity
uuid = { version = "1", features = ["v5", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }

# Parallelism
rayon = "1"

# Compression
flate2 = "1"
lz4_flex = "0.11"

# Linear algebra (robust SVD for degenerate NIF matrices)
nalgebra = "0.33"

# Physics (nalgebra 0.33 ABI matches the workspace pin above)
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Image loading
image = "0.24"

# Audio (M44 — 3D positional, reverb zones, streaming, attenuation curves)
# Pinned to 0.10 — game-oriented Rust audio with built-in SpatialScene
# (per-emitter listener-relative attenuation), reverb effect, and
# streaming/static sound formats (WAV/OGG/MP3/FLAC). Fallback strategy
# for CI/headless: AudioWorld holds an Option<AudioManager>; init
# failure (no audio device) leaves it None and the ECS system no-ops.
kira = "0.10"

# C++ interop
cxx = "1"
cxx-build = "1"

# Heap profiling — opt-in regression-test gate for the NIF-PERF-01/02/03
# + #408 architectural pins (#1247). Off by default; enabled via the
# per-crate `dhat-heap` feature. Pulled here so any future crate that
# wants to ship its own allocation-bound regression test (renderer hot
# path / ECS query churn) shares one version.
dhat = "0.3"

# Host CPU/RAM sampling for the debug UI's `MetricsSnapshot`. Pinned to
# 0.30 (last-stable pre-0.31 API churn) so the renderer crate doesn't
# have to track sysinfo's per-release `global_cpu_info` /
# `refresh_processes_specifics` rename treadmill. Refresh cadence is
# user-driven (2 Hz default via `metrics_sample_system`); zero cost
# when the system is throttled-out.
sysinfo = { version = "0.30", default-features = false }

# Terminal UI for `byro-dbg --tui` (Phase 3 of the debug-UI plan).
# ratatui 0.28 pairs with crossterm 0.28; both are pinned at the
# workspace level so any future TUI tool in the workspace picks up
# the same versions without per-crate drift.
ratatui = "0.28"
crossterm = "0.28"

# Embedded debug-UI overlay (Phase 4 of the debug-UI plan).
# egui 0.33 + egui-winit 0.33 are the latest series that
# egui-ash-renderer 0.11.0 pins through its transitive deps —
# bumping our direct dep to 0.34 puts two copies of `egui` in the
# graph and breaks the FullOutput pass-through. The
# `gpu-allocator` feature lets egui-ash-renderer share our
# `SharedAllocator` instead of standing up a parallel allocator.
egui = "0.33"
egui-winit = { version = "0.33", default-features = false, features = ["links", "wayland", "x11"] }
egui-ash-renderer = { version = "0.11", features = ["gpu-allocator"] }

# ── Debug-build optimisation for math-heavy deps (Phase 12) ─────
#
# Diagnosis: on a Skyrim interior (Sleeping Giant Inn, 3211 ECS
# entities, hundreds of static `bhkRigidBody`-imported colliders),
# the debug-UI Metrics panel measured `physics_sync_system =
# 414 ms` per frame — single system dominating the 555 ms wall
# frame. Root cause: rapier3d / parry3d / nalgebra run with
# `opt-level = 0` in debug builds, where the per-iteration math
# (matrix multiplies, BVH descents, narrow-phase contact tests)
# is ~100× slower than release. The engine code itself benefits
# from being unoptimised (fast iteration, debuggable stacks), so
# the right answer is per-package optimisation: keep the engine
# at the default `opt-level = 0`, lift the math crates to 3.
#
# Pattern lifted from the Bevy / Macroquad playbook. The
# `--release` build is unaffected (already opt-level=3 globally).

[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.parry3d]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

# `glam` is also math-heavy and on the engine's hot transform
# path; lifting it makes the whole ECS faster in debug too.
[profile.dev.package.glam]
opt-level = 3
