[package]
name = "byroredux"
version.workspace = true
edition.workspace = true
default-run = "byroredux"

[features]
default = ["debug-server"]
debug-server = ["dep:byroredux-debug-server"]

[dependencies]
byroredux-debug-server = { workspace = true, optional = true }
byroredux-core = { workspace = true }
byroredux-renderer = { workspace = true }
byroredux-platform = { workspace = true }
byroredux-scripting = { workspace = true }
byroredux-nif = { workspace = true }
byroredux-bsa = { workspace = true }
byroredux-physics = { workspace = true }
byroredux-plugin = { workspace = true }
byroredux-cxx-bridge = { workspace = true }
byroredux-ui = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
