[package]
name = "byroredux"
version.workspace = true
edition.workspace = true
default-run = "byroredux"

[features]
default = ["debug-server"]
debug-server = ["dep:byroredux-debug-server"]
# Profiling: pipe `tracing` spans into a Tracy capture session. See
# #886 / INFRA-PERF-01. Off by default — the dep is heavy and Tracy
# is a developer-time tool, not a shipping-build feature. Enable
# with `cargo run --features tracing-tracy`.
tracing-tracy = ["dep:tracing-tracy"]

[dependencies]
byroredux-debug-server = { workspace = true, optional = true }
byroredux-core = { workspace = true }
byroredux-renderer = { workspace = true }
byroredux-platform = { workspace = true }
byroredux-scripting = { workspace = true }
byroredux-nif = { workspace = true }
byroredux-bsa = { workspace = true }
byroredux-bgsm = { workspace = true }
byroredux-facegen = { workspace = true }
byroredux-audio = { workspace = true }
byroredux-physics = { workspace = true }
byroredux-plugin = { workspace = true }
byroredux-cxx-bridge = { workspace = true }
byroredux-ui = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Optional: pipes spans into a Tracy capture session. Behind the
# `tracing-tracy` binary feature so default builds don't pull it in.
tracing-tracy = { workspace = true, optional = true }
anyhow = { workspace = true }
winit = { workspace = true }
