[package]
name = "byroredux-core"
version.workspace = true
edition.workspace = true

[features]
default = ["parallel-scheduler"]
parallel-scheduler = ["rayon"]
inspect = ["serde", "serde_json", "glam/serde"]
# Save/load (M45) reuses the same serde derives as `inspect`; kept as a
# distinct feature name so the save crate can opt in without implying the
# debug-inspection intent.
save = ["inspect"]

[dependencies]
glam = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
string-interner = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
