[package]
name = "byroredux-debug-server"
version.workspace = true
edition.workspace = true

[dependencies]
byroredux-core = { workspace = true, features = ["inspect"] }
byroredux-papyrus = { workspace = true }
byroredux-debug-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
