[package]
name = "byroredux-pex"
version.workspace = true
edition.workspace = true

# Compiled-Papyrus (`.pex`) container reader — the vanilla-runtime script
# format. Phase 1 of M47.2: decode the file into a structured `Pex` model
# (header / string table / debug info / objects → properties / states /
# functions → bytecode instructions). The bytecode→AST decompiler (Phase 2)
# is a separate module that consumes this model's `Function.instructions`.
#
# Ported from Champollion (Orvid/Champollion, the reference `.pex` →
# `.psc` decompiler). See docs/engine/m47-2-design.md.

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
# The decompiler lowers its node tree to the shared Papyrus AST so a
# decompiled `.pex` reuses every existing `.psc` recognizer. papyrus does
# not depend on pex, so this is acyclic (mirrors how the nif crate's
# import module depends on core).
byroredux-papyrus = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
# For the `pex_corpus_smoke` example only — iterate real Skyrim/FO4/
# Starfield script archives and parse every `.pex`. bsa does not depend on
# pex, so this dev-only edge introduces no cycle.
byroredux-bsa = { workspace = true }
