[package]
name = "byroredux-renderer"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
byroredux-core = { workspace = true }
byroredux-platform = { workspace = true }
ash = { workspace = true }
ash-window = { workspace = true }
gpu-allocator = { workspace = true }
rspirv = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
