[package]
name = "byroredux-scripting"
version.workspace = true
edition.workspace = true

[features]
# M45 — derive serde on the script-owned game-state components
# (`ScriptTimer`) so the save crate can snapshot them. Off by default;
# the binary turns it on.
save = ["serde", "byroredux-core/save"]

[dependencies]
byroredux-core = { workspace = true }
serde = { workspace = true, optional = true }
# M47.1 — scripting needs the `Condition` / `ConditionList` types
# from `byroredux_plugin::esm::records::condition` so the evaluator
# can operate on parser-produced data. No cycle: plugin parses ESM
# bytes (knows nothing about runtime), scripting evaluates against
# ECS state (depends on parsed data shapes). Same direction as the
# already-present byroredux_core <- byroredux_plugin chain.
byroredux-plugin = { workspace = true }
# M47.2 — the canonical scripting-translation layer (`translate/`) recognizes
# behavior archetypes from the parsed Papyrus AST. papyrus is standalone
# (lexer/parser only), so no cycle.
byroredux-papyrus = { workspace = true }
# M47.2 — the compiled-Papyrus (`.pex`) front-end: decompile vanilla
# bytecode to the same Papyrus AST the recognizers consume. pex depends on
# papyrus only, so this stays acyclic.
byroredux-pex = { workspace = true }
log = { workspace = true }

[dev-dependencies]
# Opt-in end-to-end test: extract a real vanilla `.pex` from a game archive
# and run it through decompile → recognize.
byroredux-bsa = { workspace = true }
